@@ -1,83 +1,84 @@
-# ⏱️ JavaFX Presentation Timer
+#♟️ JavaFX Chess
 
-A simple and elegant **presentation timer** built with **JavaFX**.  
-This project was developed as part of a software engineering assignment to help presenters manage and visualize their speaking time during a session.
+A minimal two-player chess clock built with JavaFX. Each player has an independent countdown; turns are switched, styles update (white/black sides), and time choices are picked via a startup dialog.
 
----
+Features
 
-## 🧩 Features
+Time selection at launch: a ChoiceDialog lets you pick the base time (minutes) for both players.
 
-- ⏳ **Start / Pause / Reset** controls for flexible timing  
-- 🎨 **Visual feedback** (color change or alert) when time is nearly up  
-- 🖥️ **Clean JavaFX interface** defined in `view.fxml`  
-- ⚙️ **MVC architecture** for structured code separation:
-  - `Main.java` → launches the application  
-  - `Controlleur.java` → handles UI logic and user events  
-  - `Timer.java` → manages timing and countdown logic  
+Two synchronized timers: one runs while the other is paused; they swap on turn change.
 
----
+Side switching: a Switch sides button flips left/right players (useful if you set up the board the other way around).
 
-## 🛠️ Technologies
+Clear visual cues: white vs. black panes with large, centered labels for remaining time.
 
-- Java 11 or higher  
-- JavaFX SDK  
+Tech Stack
 
----
+Java 11+ (or 8 if you bundle JavaFX)
 
-## 🚀 Getting Started
+JavaFX (FXML UI)
 
-### 1. Clone the repository
+Simple MVC-style classes:
 
-bash
-git clone https://github.com/<your-username>/<your-repo>.git
-cd <your-repo>
+app.Main — bootstraps the JavaFX application and loads view.fxml.
 
-2. Compile the project
-   
-javac *.java
+app.Controlleur — UI controller: time selection dialog, start/stop, side switch, and style updates.
 
-4. Run the application
+app.models.Timer — Runnable chess clock logic handling the two players and turn swapping.
 
-java Main
+app.models.Player — holds per-player state (remaining time, color, active/inactive).
 
-Or, if you’re using an IDE like IntelliJ IDEA or Eclipse, simply open the project and run Main.java.
+Getting Started
+1) Clone
+git clone <your-repo-url>
+cd <repo>
 
-🧠 Architecture Overview
-The application follows a simple Model–View–Controller (MVC) pattern:
+2) Run (IDE way)
 
+Open the project in IntelliJ IDEA or VS Code with Java and JavaFX support, then run app.Main.
 
-┌────────────────────┐
-│     Main.java      │  → Initializes the app and loads FXML
-├────────────────────┤
-│  Controlleur.java  │  → Handles UI events and state updates
-├────────────────────┤
-│     Timer.java     │  → Core timer logic and time tracking
-├────────────────────┤
-│     view.fxml      │  → Defines the graphical layout
-└────────────────────┘
-🖼️ Preview
-(Optional — add a screenshot here)
+3) Run (CLI way, with standalone JavaFX)
 
-+---------------------------+
-|     Presentation Timer    |
-|---------------------------|
-| [ Start ]  [ Pause ]      |
-| Remaining time: 05:00     |
-+---------------------------+
-👥 Authors
-Developed by Loann Pottier and collaborators
+If you have JavaFX SDK installed, adjust the path below and run:
 
-Project for the Software Engineering module
+# Compile
+javac --module-path <PATH_TO_FX>/lib --add-modules javafx.controls,javafx.fxml \
+  -d out $(find . -name "*.java")
 
-📄 License
-This project is released under the MIT License.
-You are free to use, modify, and distribute it.
+# Run
+java --module-path <PATH_TO_FX>/lib --add-modules javafx.controls,javafx.fxml \
+  -cp out app.Main
 
-💡 Future Improvements
-Add customizable presets (5, 10, 15 min, etc.)
+How to Use
 
-Sound or vibration alerts
+Start the app → a dialog appears to choose the base time (e.g., “5 minutes”).
 
-Save previous session durations
+Clock starts → one side is active and counts down; the other is paused.
 
+Switch turns → use the on-screen control (Switch sides) to flip left/right players if needed.
+(Turn progression and style updates are handled by the controller and model.)
 
+Tip: The large time labels (time1, time2) and white/black pane backgrounds make it easy to see who’s on move.
+
+Project Structure
+src/
+ └─ app/
+     ├─ Main.java                # Launches JavaFX and loads FXML
+     ├─ Controlleur.java         # UI logic (dialog, styles, switching)
+     └─ models/
+         ├─ Timer.java           # Runnable chess-clock engine
+         └─ Player.java          # Player state (time, color, active)
+resources/
+ └─ view.fxml                    # Layout (two panes, labels, switch button)
+
+Roadmap
+
+Time increments (Fischer/bronstein)
+
+Pause/Resume and Reset controls
+
+Sound/vibration alerts near time-out
+
+Keyboard shortcuts (e.g., space to switch)
+
+Packaging a self-contained build (jlink/jpackage)
